public/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300&family=Roboto+Condensed&display=swap');

:root {
--ff-Primary: Roboto Condensed, sans-serif;
--navFont: black (0, 0%, 24%);
}

/* header, .project:not(:last-child) {
  border-bottom: 1px solid #ccc;
} */

.no-button {
  background: none;
  border: none;
  padding: 0;
  cursor: pointer;
  color: #1b89bc;
  text-decoration: none;
  font-size: 100%;
}

.no-button:hover {
  color: #065b83;
  text-decoration: underline;
}

.dollar-amount {
  color: #056605;
  font-weight: bold;
  margin-left: -5px;
}

h2 img{
  height: 90px;
  width: 90px;
}

h2, h3 {
  font-family: var(--ff-Primary);
}

/* header/nav bar */
.Primary-Header {
  overflow: hidden;  
  font-size: 1.3rem;
  display: flex;
  justify-content: space-between;
  background-color: antiquewhite;

}

.Logo-main {
  font-size: 2rem;
  color: var(--navFont);
  margin-inline: 10px;
  text-decoration: none;
  float: left;
}


.Primary-Navbar {
  margin: 14px;
  font-weight: 400; 
  text-align: right;
  display: inline;
  background-color: antiquewhite;
}

.Primary-Navbar-Link {
 
  text-decoration: none;
  color: var(--navFont  );
  /* margin-inline: 5px; */
  bottom: 30px;
  justify-content: space-between;
}

.primary-container {
  float: right;
  margin-inline: 10px;
  margin-top: 5px;
}

/* main body of page */
.loginbox {
    position: absolute;
    color:lightblue;
    top: 50%;
    left: 41%;
    text-align: center;
    align-items: center;
  
  }
  
  .background-image {
    background-image: url('/images/homepagebackground.jpeg');
    background-size: cover;
    background-repeat: no-repeat;
    height: 100vh;
    margin: 0;
    padding: 0;
  }

/* Footer */
  .Primary-Footer {
    /* position: absolute; */
    bottom: 0;
    right: 0;
    padding: 10px;
  }
  
  .footer-row {
    display: flex;
    justify-content: flex-end;
  }
  
  .footer-row a {
    margin-left: 10px;
    color: var(--navFont);
    font-family: var(--ff-Primary);
    font-size: 1.3rem;
  }

